--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <input type="text" id="password" /><br />
     <button id="join">Entrar</button>
     <button id="newCount">Criar conta</button>
+
+    <div id="mainAcess"></div>
   </body>
 </html>
