--- a/listCount.html
+++ b/listCount.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./listCountScript.js"></script>
+    <script src="./listCountScript.js" defer></script>
   </head>
   <body>
     <h1>Lista da contas:</h1>
+    <button id="refreshBtn">refresh</button>
     <ul id="countList"></ul>
   </body>
 </html>
