--- a/listCount.html
+++ b/listCount.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Lista da contas:</h1>
     <button id="refreshBtn">refresh</button>
+    <button><a href="home.html">voltar</a></button>
     <ul id="countList"></ul>
   </body>
 </html>
