--- a/listCount.html
+++ b/listCount.html
@@ -10,7 +10,10 @@
   <body>
     <h1>Lista da contas:</h1>
     <button id="refreshBtn">refresh</button>
-    <button><a href="home.html">voltar</a></button>
+    <button>
+      <a href="home.html" style="text-decoration: none; color: white">voltar</a>
+    </button>
+    <button id="deletAll">deletar todas</button>
     <ul id="countList"></ul>
   </body>
 </html>
